pkgs/ndarray/hook/custom_ufuncs.h

/* ============================================================================
 * SECTION 1: CORE COMPLEX TYPE DEFINITIONS
 * ============================================================================
 * Binary-compatible complex number structures matching kiss_fft_cpx
 * and mapped directly to ndarray's custom Complex structures.
 */

typedef struct {
    double r; /** Real component */
    double i; /** Imaginary component */
} cpx_t;
typedef struct {
    float r;  /** Real component */
    float i;  /** Imaginary component */
} cpx_f_t;
void v_exp_double(const double *src, double *res, int size);
void v_log_double(const double *src, double *res, int size);
double r_sum_double(const double *src, int size);
double r_prod_double(const double *src, int size);
void v_add_complex(const cpx_t *a, const cpx_t *b, cpx_t *res, int size);
void v_sub_complex(const cpx_t *a, const cpx_t *b, cpx_t *res, int size);
void v_mul_complex(const cpx_t *a, const cpx_t *b, cpx_t *res, int size);
void v_div_complex(const cpx_t *a, const cpx_t *b, cpx_t *res, int size);
void v_add_float(const float *a, const float *b, float *res, int size);
void v_sub_float(const float *a, const float *b, float *res, int size);
void v_mul_float(const float *a, const float *b, float *res, int size);
void v_div_float(const float *a, const float *b, float *res, int size);
void v_sin_float(const float *src, float *res, int size);
void v_cos_float(const float *src, float *res, int size);
void v_exp_float(const float *src, float *res, int size);
void v_log_float(const float *src, float *res, int size);
float r_sum_float(const float *src, int size);
float r_prod_float(const float *src, int size);
void v_sqrt_double(const double *src, double *res, int size);
void v_tan_double(const double *src, double *res, int size);
void v_abs_double(const double *src, double *res, int size);
void v_ceil_double(const double *src, double *res, int size);
void v_floor_double(const double *src, double *res, int size);
void v_round_double(const double *src, double *res, int size);
void v_clip_double(const double *src, double *res, double min_val, double max_val, int size);
void v_sqrt_float(const float *src, float *res, int size);
void v_tan_float(const float *src, float *res, int size);
void v_abs_float(const float *src, float *res, int size);
void v_ceil_float(const float *src, float *res, int size);
void v_floor_float(const float *src, float *res, int size);
void v_round_float(const float *src, float *res, int size);
void v_clip_float(const float *src, float *res, float min_val, float max_val, int size);
void v_asin_double(const double *src, double *res, int size);
void v_asin_float(const float *src, float *res, int size);
void v_acos_double(const double *src, double *res, int size);
void v_acos_float(const float *src, float *res, int size);
void v_atan_double(const double *src, double *res, int size);
void v_atan_float(const float *src, float *res, int size);
void v_atan2_double(const double *y, const double *x, double *res, int size);
void v_atan2_float(const float *y, const float *x, float *res, int size);
void v_sinh_double(const double *src, double *res, int size);
void v_sinh_float(const float *src, float *res, int size);
void v_cosh_double(const double *src, double *res, int size);
void v_cosh_float(const float *src, float *res, int size);
void v_tanh_double(const double *src, double *res, int size);
void v_tanh_float(const float *src, float *res, int size);
void v_asinh_double(const double *src, double *res, int size);
void v_asinh_float(const float *src, float *res, int size);
void v_acosh_double(const double *src, double *res, int size);
void v_acosh_float(const float *src, float *res, int size);
void v_atanh_double(const double *src, double *res, int size);
void v_atanh_float(const float *src, float *res, int size);
void v_sin_complex128(const cpx_t *src, cpx_t *res, int size);
void v_sin_complex64(const cpx_f_t *src, cpx_f_t *res, int size);
void v_cos_complex128(const cpx_t *src, cpx_t *res, int size);
void v_cos_complex64(const cpx_f_t *src, cpx_f_t *res, int size);
void v_tan_complex128(const cpx_t *src, cpx_t *res, int size);