pkgs/ndarray/lib/src/ndarray_bindings.dart


@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Double>, ffi.Int)
>()
external void v_exp_double(
  ffi.Pointer<ffi.Double> src,
  ffi.Pointer<ffi.Double> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Double>, ffi.Int)
>()
external void v_log_double(
  ffi.Pointer<ffi.Double> src,
  ffi.Pointer<ffi.Double> res,
  int size,
);

@ffi.Native<ffi.Double Function(ffi.Pointer<ffi.Double>, ffi.Int)>()
external double r_sum_double(ffi.Pointer<ffi.Double> src, int size);

@ffi.Native<ffi.Double Function(ffi.Pointer<ffi.Double>, ffi.Int)>()
external double r_prod_double(ffi.Pointer<ffi.Double> src, int size);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<cpx_t>,
    ffi.Pointer<cpx_t>,
    ffi.Pointer<cpx_t>,
    ffi.Int,
  )
>()
external void v_add_complex(
  ffi.Pointer<cpx_t> a,
  ffi.Pointer<cpx_t> b,
  ffi.Pointer<cpx_t> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<cpx_t>,
    ffi.Pointer<cpx_t>,
    ffi.Pointer<cpx_t>,
    ffi.Int,
  )
>()
external void v_sub_complex(
  ffi.Pointer<cpx_t> a,
  ffi.Pointer<cpx_t> b,
  ffi.Pointer<cpx_t> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<cpx_t>,
    ffi.Pointer<cpx_t>,
    ffi.Pointer<cpx_t>,
    ffi.Int,
  )
>()
external void v_mul_complex(
  ffi.Pointer<cpx_t> a,
  ffi.Pointer<cpx_t> b,
  ffi.Pointer<cpx_t> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<cpx_t>,
    ffi.Pointer<cpx_t>,
    ffi.Pointer<cpx_t>,
    ffi.Int,
  )
>()
external void v_div_complex(
  ffi.Pointer<cpx_t> a,
  ffi.Pointer<cpx_t> b,
  ffi.Pointer<cpx_t> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
    ffi.Int,
  )
>()
external void v_add_float(
  ffi.Pointer<ffi.Float> a,
  ffi.Pointer<ffi.Float> b,
  ffi.Pointer<ffi.Float> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
    ffi.Int,
  )
>()
external void v_sub_float(
  ffi.Pointer<ffi.Float> a,
  ffi.Pointer<ffi.Float> b,
  ffi.Pointer<ffi.Float> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
    ffi.Int,
  )
>()
external void v_mul_float(
  ffi.Pointer<ffi.Float> a,
  ffi.Pointer<ffi.Float> b,
  ffi.Pointer<ffi.Float> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
    ffi.Int,
  )
>()
external void v_div_float(
  ffi.Pointer<ffi.Float> a,
  ffi.Pointer<ffi.Float> b,
  ffi.Pointer<ffi.Float> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Float>, ffi.Pointer<ffi.Float>, ffi.Int)
>()
external void v_sin_float(
  ffi.Pointer<ffi.Float> src,
  ffi.Pointer<ffi.Float> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Float>, ffi.Pointer<ffi.Float>, ffi.Int)
>()
external void v_cos_float(
  ffi.Pointer<ffi.Float> src,
  ffi.Pointer<ffi.Float> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Float>, ffi.Pointer<ffi.Float>, ffi.Int)
>()
external void v_exp_float(
  ffi.Pointer<ffi.Float> src,
  ffi.Pointer<ffi.Float> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Float>, ffi.Pointer<ffi.Float>, ffi.Int)
>()
external void v_log_float(
  ffi.Pointer<ffi.Float> src,
  ffi.Pointer<ffi.Float> res,
  int size,
);

@ffi.Native<ffi.Float Function(ffi.Pointer<ffi.Float>, ffi.Int)>()
external double r_sum_float(ffi.Pointer<ffi.Float> src, int size);

@ffi.Native<ffi.Float Function(ffi.Pointer<ffi.Float>, ffi.Int)>()
external double r_prod_float(ffi.Pointer<ffi.Float> src, int size);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Double>, ffi.Int)
>()
external void v_sqrt_double(
  ffi.Pointer<ffi.Double> src,
  ffi.Pointer<ffi.Double> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Double>, ffi.Int)
>()
external void v_tan_double(
  ffi.Pointer<ffi.Double> src,
  ffi.Pointer<ffi.Double> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Double>, ffi.Int)
>()
external void v_abs_double(
  ffi.Pointer<ffi.Double> src,
  ffi.Pointer<ffi.Double> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Double>, ffi.Int)
>()
external void v_ceil_double(
  ffi.Pointer<ffi.Double> src,
  ffi.Pointer<ffi.Double> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Double>, ffi.Int)
>()
external void v_floor_double(
  ffi.Pointer<ffi.Double> src,
  ffi.Pointer<ffi.Double> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Double>, ffi.Int)
>()
external void v_round_double(
  ffi.Pointer<ffi.Double> src,
  ffi.Pointer<ffi.Double> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Double>,
    ffi.Double,
    ffi.Double,
    ffi.Int,
  )
>()
external void v_clip_double(
  ffi.Pointer<ffi.Double> src,
  ffi.Pointer<ffi.Double> res,
  double min_val,
  double max_val,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Float>, ffi.Pointer<ffi.Float>, ffi.Int)
>()
external void v_sqrt_float(
  ffi.Pointer<ffi.Float> src,
  ffi.Pointer<ffi.Float> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Float>, ffi.Pointer<ffi.Float>, ffi.Int)
>()
external void v_tan_float(
  ffi.Pointer<ffi.Float> src,
  ffi.Pointer<ffi.Float> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Float>, ffi.Pointer<ffi.Float>, ffi.Int)
>()
external void v_abs_float(
  ffi.Pointer<ffi.Float> src,
  ffi.Pointer<ffi.Float> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Float>, ffi.Pointer<ffi.Float>, ffi.Int)
>()
external void v_ceil_float(
  ffi.Pointer<ffi.Float> src,
  ffi.Pointer<ffi.Float> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Float>, ffi.Pointer<ffi.Float>, ffi.Int)
>()
external void v_floor_float(
  ffi.Pointer<ffi.Float> src,
  ffi.Pointer<ffi.Float> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Float>, ffi.Pointer<ffi.Float>, ffi.Int)
>()
external void v_round_float(
  ffi.Pointer<ffi.Float> src,
  ffi.Pointer<ffi.Float> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
    ffi.Float,
    ffi.Float,
    ffi.Int,
  )
>()
external void v_clip_float(
  ffi.Pointer<ffi.Float> src,
  ffi.Pointer<ffi.Float> res,
  double min_val,
  double max_val,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Double>, ffi.Int)
>()
external void v_asin_double(
  ffi.Pointer<ffi.Double> src,
  ffi.Pointer<ffi.Double> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Float>, ffi.Pointer<ffi.Float>, ffi.Int)
>()
external void v_asin_float(
  ffi.Pointer<ffi.Float> src,
  ffi.Pointer<ffi.Float> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Double>, ffi.Int)
>()
external void v_acos_double(
  ffi.Pointer<ffi.Double> src,
  ffi.Pointer<ffi.Double> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Float>, ffi.Pointer<ffi.Float>, ffi.Int)
>()
external void v_acos_float(
  ffi.Pointer<ffi.Float> src,
  ffi.Pointer<ffi.Float> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Double>, ffi.Int)
>()
external void v_atan_double(
  ffi.Pointer<ffi.Double> src,
  ffi.Pointer<ffi.Double> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Float>, ffi.Pointer<ffi.Float>, ffi.Int)
>()
external void v_atan_float(
  ffi.Pointer<ffi.Float> src,
  ffi.Pointer<ffi.Float> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Double>,
    ffi.Int,
  )
>()
external void v_atan2_double(
  ffi.Pointer<ffi.Double> y,
  ffi.Pointer<ffi.Double> x,
  ffi.Pointer<ffi.Double> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
    ffi.Int,
  )
>()
external void v_atan2_float(
  ffi.Pointer<ffi.Float> y,
  ffi.Pointer<ffi.Float> x,
  ffi.Pointer<ffi.Float> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Double>, ffi.Int)
>()
external void v_sinh_double(
  ffi.Pointer<ffi.Double> src,
  ffi.Pointer<ffi.Double> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Float>, ffi.Pointer<ffi.Float>, ffi.Int)
>()
external void v_sinh_float(
  ffi.Pointer<ffi.Float> src,
  ffi.Pointer<ffi.Float> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Double>, ffi.Int)
>()
external void v_cosh_double(
  ffi.Pointer<ffi.Double> src,
  ffi.Pointer<ffi.Double> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Float>, ffi.Pointer<ffi.Float>, ffi.Int)
>()
external void v_cosh_float(
  ffi.Pointer<ffi.Float> src,
  ffi.Pointer<ffi.Float> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Double>, ffi.Int)
>()
external void v_tanh_double(
  ffi.Pointer<ffi.Double> src,
  ffi.Pointer<ffi.Double> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Float>, ffi.Pointer<ffi.Float>, ffi.Int)
>()
external void v_tanh_float(
  ffi.Pointer<ffi.Float> src,
  ffi.Pointer<ffi.Float> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Double>, ffi.Int)
>()
external void v_asinh_double(
  ffi.Pointer<ffi.Double> src,
  ffi.Pointer<ffi.Double> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Float>, ffi.Pointer<ffi.Float>, ffi.Int)
>()
external void v_asinh_float(
  ffi.Pointer<ffi.Float> src,
  ffi.Pointer<ffi.Float> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Double>, ffi.Int)
>()
external void v_acosh_double(
  ffi.Pointer<ffi.Double> src,
  ffi.Pointer<ffi.Double> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Float>, ffi.Pointer<ffi.Float>, ffi.Int)
>()
external void v_acosh_float(
  ffi.Pointer<ffi.Float> src,
  ffi.Pointer<ffi.Float> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Double>, ffi.Int)
>()
external void v_atanh_double(
  ffi.Pointer<ffi.Double> src,
  ffi.Pointer<ffi.Double> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Float>, ffi.Pointer<ffi.Float>, ffi.Int)
>()
external void v_atanh_float(
  ffi.Pointer<ffi.Float> src,
  ffi.Pointer<ffi.Float> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<cpx_t>, ffi.Pointer<cpx_t>, ffi.Int)
>()
external void v_sin_complex128(
  ffi.Pointer<cpx_t> src,
  ffi.Pointer<cpx_t> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<cpx_f_t>, ffi.Pointer<cpx_f_t>, ffi.Int)
>()
external void v_sin_complex64(
  ffi.Pointer<cpx_f_t> src,
  ffi.Pointer<cpx_f_t> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<cpx_t>, ffi.Pointer<cpx_t>, ffi.Int)
>()
external void v_cos_complex128(
  ffi.Pointer<cpx_t> src,
  ffi.Pointer<cpx_t> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<cpx_f_t>, ffi.Pointer<cpx_f_t>, ffi.Int)
>()
external void v_cos_complex64(
  ffi.Pointer<cpx_f_t> src,
  ffi.Pointer<cpx_f_t> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<cpx_t>, ffi.Pointer<cpx_t>, ffi.Int)
>()
external void v_tan_complex128(
  ffi.Pointer<cpx_t> src,
  ffi.Pointer<cpx_t> res,
  int size,
);
